--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "mapbox-gl",
+  "name": "@thibaudm/mapbox-gl-js-indoor",
   "description": "A WebGL interactive maps library",
-  "version": "1.6.1",
+  "version": "1.6.1-0",
   "main": "dist/mapbox-gl.js",
   "style": "dist/mapbox-gl.css",
   "license": "SEE LICENSE IN LICENSE.txt",
   "repository": {
     "type": "git",
-    "url": "git://github.com/mapbox/mapbox-gl-js.git"
+    "url": "git://github.com/thibaudm/mapbox-gl-js.git"
   },
   "engines": {
     "node": ">=6.4.0"
